<resources>
    <string name="app_name">二师在线</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="rememberpassword">记住密码</string>
    <string name="login">登录</string>
    <string name="search">搜索</string>
    <string name="scan">扫一扫</string>
    <string name="announcement">通知</string>
    <string name="send">发送</string>

    <string name="user_info">个人信息</string>
    <string name="scan_result">扫描结果</string>
    <string name="learn">学习</string>
    <string name="teachingResearch">教研</string>
    <string name="peer">同行</string>
    <string name="message">消息</string>
    <string name="courseCenter">选课中心</string>
    <string name="workshopGroup">工作坊群</string>
    <string name="consulting">教务咨询</string>
    <string name="settings">设置</string>
    <string name="qr_code">二维码/条码</string>

    <string name="clear_caching">清除缓存</string>
    <string name="clear_off_download_content">清除离线下载内容</string>
    <string name="freeback">意见反馈</string>
    <string name="detection_version">检测版本</string>
    <string name="about_us">关于我们</string>
    <string name="exit_login">退出登录</string>
    <string name="hotline">服务热线</string>
    <string name="hotline_phone">020–34113597</string>
    <string name="consultation">（点击号码拨号咨询）</string>

    <string name="emptyTrainInfo">暂无参与培训信息</string>
    <string name="gotoCmtsLearn">进入社区，交流教学经验</string>
    <string name="course_learn">课程学习</string>
    <string name="workshop_training">工作坊研修</string>
    <string name="cmts_development">研修社区</string>
    <string name="empty_course">暂时没有选课</string>
    <string name="gotoSelectCourse">前往选课>></string>
    <string name="learnAndSelectCourse">开始学习，前往选课</string>
    <string name="empty_workshop">暂时没有参与工作坊</string>
    <string name="gotoCreateWS">前往创建</string>

    <string name="resources">资源</string>
    <string name="discuss">讨论</string>
    <string name="questions">问答</string>
    <string name="progress">进度</string>
    <string name="download">下载</string>

    <string name="cmts_says">研说</string>
    <string name="cmts_build">发布</string>
    <string name="cmts_lesson">创课</string>
    <string name="cmts_activity">活动</string>

    <string name="relatedWS">与我相关</string>
    <string name="all">全部</string>

    <string name="createtime">创建时间</string>
</resources>
