<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_bg"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_size_30">

        <LinearLayout
            android:id="@+id/ll_userInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_size_50"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/margin_size_20"
            android:paddingTop="@dimen/margin_size_20">

            <ImageView
                android:id="@+id/iv_userIco"
                android:layout_width="@dimen/margin_size_50"
                android:layout_height="@dimen/margin_size_50"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_user_default" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_size_16"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center|left"
                    android:maxLines="1"
                    android:text="欧阳修"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_18" />

                <TextView
                    android:id="@+id/tv_deptName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center|left"
                    android:maxLines="1"
                    android:paddingTop="@dimen/margin_size_6"
                    android:text="岭南师范学院"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_14" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_learn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_size_50"
            android:layout_marginTop="@dimen/margin_size_20"
            android:drawableLeft="@drawable/menu_learn"
            android:drawablePadding="@dimen/margin_size_30"
            android:gravity="center|left"
            android:text="@string/learn"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_18" />

        <TextView
            android:id="@+id/tv_teaching"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_size_50"
            android:layout_marginTop="@dimen/margin_size_20"
            android:drawableLeft="@drawable/menu_tr"
            android:drawablePadding="@dimen/margin_size_30"
            android:gravity="center|left"
            android:text="@string/teachingResearch"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_18" />

        <TextView
            android:id="@+id/tv_peer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_size_50"
            android:layout_marginTop="@dimen/margin_size_20"
            android:drawableLeft="@drawable/menu_peer"
            android:drawablePadding="@dimen/margin_size_30"
            android:gravity="center|left"
            android:text="@string/peer"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_18" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_size_50"
            android:layout_marginTop="@dimen/margin_size_20"
            android:drawableLeft="@drawable/menu_message"
            android:drawablePadding="@dimen/margin_size_30"
            android:gravity="center|left"
            android:text="@string/message"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_18" />

        <TextView
            android:id="@+id/tv_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_size_50"
            android:layout_marginTop="@dimen/margin_size_20"
            android:drawableLeft="@drawable/menu_course"
            android:drawablePadding="@dimen/margin_size_30"
            android:gravity="center|left"
            android:text="@string/courseCenter"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_18"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_workshop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_size_50"
            android:layout_marginTop="@dimen/margin_size_20"
            android:drawableLeft="@drawable/menu_ws"
            android:drawablePadding="@dimen/margin_size_30"
            android:gravity="center|left"
            android:text="@string/workshopGroup"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_18" />

        <TextView
            android:id="@+id/tv_consulting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_size_50"
            android:layout_marginTop="@dimen/margin_size_20"
            android:drawableLeft="@drawable/menu_ec"
            android:drawablePadding="@dimen/margin_size_30"
            android:gravity="center|left"
            android:text="@string/consulting"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_18" />

        <TextView
            android:id="@+id/tv_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_size_50"
            android:layout_marginTop="@dimen/margin_size_20"
            android:drawableLeft="@drawable/menu_settings"
            android:drawablePadding="@dimen/margin_size_30"
            android:gravity="center|left"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_18" />
    </LinearLayout>
</ScrollView>